# swagger/swagger_output.json
@@ -4590,7 +4590,7 @@
                             "description": "위키 문서 수정 사유",
                             "example": "위키 문서 수정 사유"
                           },
-                          "timestamp": {
+                          "created_at": {
                             "type": "string",
                             "description": "수정된 시각",
                             "example": "2023-06-27T06:46:25.000Z"
@@ -4619,6 +4619,101 @@
                             "type": "boolean",
                             "description": "롤백인지 여부",
                             "example": "0"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "위키 히스토리 불러오기 중 오류",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Res500"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/wiki/historys": {
+      "get": {
+        "tags": ["wiki"],
+        "summary": "최근 변경된 위키 히스토리 불러오기",
+        "description": "GET 방식으로 최근 변경된 위키 히스토리를 불러옵니다.",
+        "responses": {
+          "200": {
+            "description": "최근 변경된 위키 히스토리 불러오기 성공",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "description": "200",
+                      "example": "200"
+                    },
+                    "success": {
+                      "type": "boolean",
+                      "description": "true",
+                      "example": true
+                    },
+                    "historys": {
+                      "type": "array",
+                      "description": "최근 변경된 위키 히스토리 리스트",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "user_id": {
+                            "type": "integer",
+                            "description": "수정한 유저 id",
+                            "example": "1"
+                          },
+                          "doc_id": {
+                            "type": "integer",
+                            "description": "위키 문서 id",
+                            "example": "1"
+                          },
+                          "version": {
+                            "type": "integer",
+                            "description": "위키 문서 버전",
+                            "example": "1"
+                          },
+                          "summary": {
+                            "type": "string",
+                            "description": "위키 문서 수정 사유",
+                            "example": "위키 문서 수정 사유"
+                          },
+                          "created_at": {
+                            "type": "string",
+                            "description": "수정된 시각",
+                            "example": "2023-06-27T06:46:25.000Z"
+                          },
+                          "diff": {
+                            "type": "integer",
+                            "description": "전 버전 위키 문서 글자 수와의 차이",
+                            "example": "1"
+                          },
+                          "is_bad": {
+                            "type": "boolean",
+                            "description": "나쁜 수정인지 여부(1이면 나쁜 수정)",
+                            "example": "0"
+                          },
+                          "is_rollback": {
+                            "type": "boolean",
+                            "description": "롤백인지 여부",
+                            "example": "0"
+                          },
+                          "doc_title": {
+                            "type": "string",
+                            "description": "위키 문서 제목",
+                            "example": "위키 문서 제목"
                           }
                         }
                       }
